# rsflow

./: Agents.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: api-reference.md  getting-started.md  index.md
src/: main.rs
src/adapters/: mod.rs
src/adapters/api/: error.rs  handlers.rs  mod.rs
src/adapters/controllers/: group_controller.rs  mod.rs  user_controller.rs  user_group_controller.rs
src/adapters/repositories/: in_memory_repository.rs
src/core/: mod.rs
src/core/interfaces/database/: group.rs  mod.rs  user.rs  user_group.rs
src/core/models/: group_model.rs  mod.rs  user_group_model.rs  user_model.rs
src/core/services/: group_service.rs  mod.rs  user_group_service.rs  user_service.rs
src/domain/models/: user_model.rs
src/domain/services/: user_service.rs
src/infrastructure/api/: handlers.rs
src/infrastructure/api/routes/: group_routes.rs  mod.rs  user_group_routers.rs  user_routes.rs
src/ports/database/: mod.rs  user.rs
tests/: api.rs
